create api for createNonConformingProductRegisterd createReWorkforBinDryer
